--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,12 @@
 
   <%= @post.title %> by <%= @post.user.email %>, created at <%= @post.created_at %><br>
   <%= @post.content %><br>
+  <%= button_to "Add comment", new_post_comment_path(@post.id), method: 'get' %>
 
   Comments:<br>
   <ul>
     <%= render partial: "comment", collection: @comments %>
   </ul>
+
+  <%= link_to "My own posts", user_root_path(current_user) if user_signed_in? %>
+  <%= link_to "All posts", posts_path %>
