--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -3,7 +3,7 @@
   <li>
     by <%= comment.commenter.email %>, at <%= comment.created_at %><br>
     <%= comment.content %>
-    <%= button_to "Reply", new_post_reply_path(comment.post),method: 'get',:params => {comment_id: comment.id} %>
+    <%= button_to "Reply", new_post_reply_path(comment.post),method: 'get',:params => {id: comment.id, type: "Comment"} %>
     <ul>
       <%= render partial: "reply", collection: comment.replies, locals:{post: comment.post} unless comment.replies.blank? %>
     </ul>
