--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
 
 <%= form_tag("/posts", method: "get") do %>
-  <%= select_tag "blogger_id", options_from_collection_for_select(User.all, "id", "email"), include_blank: true,prompt: 'Select blogger' %>
-  <%= select_tag "date", options_for_select(["This week", "This month", "Older posts"]), include_blank: true, prompt: 'Select Date' %>
-  <%= select_tag "category", options_from_collection_for_select(Category.all, "id", "name"), include_blank: true, prompt: 'Select Categories' %>
+  <%= select_tag "blogger_id", options_from_collection_for_select(User.all, "id", "email", @blogger_id), include_blank: true,prompt: 'Select blogger' %>
+  <%= select_tag "date", options_for_select(["Today", "This week", "Older posts"], @date), include_blank: true, prompt: 'Select Date' %>
+  <%= select_tag "category_id", options_from_collection_for_select(Category.all, "id", "name", @category_id), include_blank: true, prompt: 'Select Categories' %>
   <%= submit_tag "Filter" %>
 <% end %>
 
@@ -13,3 +13,5 @@
     <%= render partial: 'post', collection: @posts  %>
   </ul>
 <% end %>
+
+<%= link_to "Add new post", new_user_post_path(current_user) %>
