--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,2 +1,4 @@
    <% i =post_counter + 1 %>
    <li><%= i %>. <%= link_to post.title, post_path(post) %>| <%= post.created_at %> | <%= post.user.email %></li>
+    <%= button_to "Edit post", edit_user_post_path(post.user, post), {method:'get'} if own_post?(post) %>
+    <%= button_to "Add comment", new_post_comment_path(post.id), method: 'get' %>
