--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,6 +6,8 @@
   <% end %>
   <%= button_to "Add comment", new_post_comment_path(@post.id), method: 'get' %>
   <%= button_to "Edit post", edit_user_post_path(@post.user, @post), {method:'get'} if own_post?(@post) %>
+  <%= button_to "Delete post", user_post_path(@post.user, @post), {method:'delete'} if own_post?(@post) %>
+
 
   Comments:<br>
   <ul>
