--- a/app/views/replies/new.html.erb
+++ b/app/views/replies/new.html.erb
@@ -1,3 +1,18 @@
+<% if @reply.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@reply.errors.count, "error") %>
+      prohibited this comment from being saved:
+    </h2>
+    <ul>
+    <% @reply.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+
 <%= @post.title %>
 <%= @post.content %>
 
@@ -11,5 +26,5 @@ Please add your reply:
   <%= f.hidden_field :repliable_id%>
   <%= f.label :content %>
   <%= f.text_field :content %>
-  <%= f.submit "Add Comment" %>
+  <%= f.submit %>
 <% end %>
