--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,6 @@
    <% i =post_counter + 1 %>
-   <li><%= i %>. <%= link_to post.title, post_path(post) %>| <%= post.created_at %> | <%= post.user.email %></li>
+   <li><%= i %>. <%= link_to post.title, post_path(post) %>| <%= post.created_at %> |
+     <%= image_tag post.user.avatar.url(:thumb) %>|<%= post.user.email %></li>
     <%= button_to "Edit post", edit_user_post_path(post.user, post), {method:'get'} if own_post?(post) %>
     <%= button_to "Add comment", new_post_comment_path(post.id), method: 'get' %>
     <%= button_to "Delete post", user_post_path(post.user, post), {method:'delete'} if own_post?(post) %>
