remove turbolinks and add bootstrap navigation bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,30 +2,60 @@
 <html>
 <head>
   <title>MyBlog</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-  <% if user_signed_in? %>
-   Logged in as <strong><%= current_user.email %></strong>.
-   <%= link_to 'Edit profile', edit_user_registration_path %> |
-   <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-  <% else %>
-   <%= link_to "Sign up", new_user_registration_path %> |
-   <%= link_to "Login", new_user_session_path %>
-  <% end %>
- <li><%= link_to "Twitter", user_twitter_omniauth_authorize_path %></li>
- <li><%= link_to "Facebook", user_facebook_omniauth_authorize_path %></li>
- <li><%= link_to "Google", user_google_oauth2_omniauth_authorize_path %></li>
- <li><%= link_to "Instragram", user_instagram_omniauth_authorize_path  %></li>
- <li><%= link_to "Linkedin", user_linkedin_omniauth_authorize_path %></li>
- <li><%= link_to "Github", user_github_omniauth_authorize_path %></li>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">My Blog</a>
+    </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <% if user_signed_in? %>
+         <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+         <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+         <li><%= link_to "Sign up", new_user_registration_path %></li>
+         <li><%= link_to "Login", new_user_session_path %></li>
+        <% end %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Social signin <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Facebook", user_facebook_omniauth_authorize_path %></li>
+            <li><%= link_to "Twitter", user_twitter_omniauth_authorize_path %></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <% if user_signed_in? %>
+           <p class= "navbar-text">Logged in as <strong><%= current_user.email %></strong></p>
+          <%  else %>
+           <p class= "navbar-text">You are not logged in</p>
+          <% end %>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
-  <p class="notice"><%= notice %></p>
+<% if !flash.blank? %>
+  <p class="notice"><%= notice%></p>
   <p class="alert"><%= alert %></p>
+<% end %>
 
 <%= yield %>
 
