--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,52 @@
-<h2>Sign up</h2>
+<br>
+<div class="container">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name),html: {class: 'form-horizontal'}) do |f| %>
+    <fieldset>
+      <legend>
+        <h2>Sign Up</h2>
+      </legend>
+      <div class="row">
+        <div class="col-sm-offset-2 col-sm-6 col-md-4">
+          <%= devise_error_messages! %>
+        </div>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <%= f.label :email, "Email:", class: "col-sm-2  control-label" %>
+      <div class=" col-sm-6 col-md-4">
+        <%= f.email_field :email, class: "form-control", autofocus: true %>
+      </div>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="form-group">
+      <%= f.label :password, "Password:", class: "col-sm-2 control-label" %>
+      <div class= "col-sm-6 col-md-4">
+        <%= f.password_field :password, class: "form-control",  placeholder:"6 characters minimum", autocomplete: "off" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password_confirmation, "Password confirmation:", class: "col-sm-2 control-label" %>
+      <div class= "col-sm-6 col-md-4">
+        <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-6">
+          <%= f.submit "Sign up", class: "btn btn-primary" %>
+        </div>
+    </div>
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-6">
+          <%= render "devise/shared/links" %>
+      </div>
+    </div>
+  </fieldset>
+  <% end %>
+</div>
