--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,7 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "welcome";
+ @import "posts";
 
  .navbar.navbar-default {
    margin-bottom: 0px;
