--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,24 +1,48 @@
-<% if @comment.errors.any? %>
-  <div id="error_explanation">
-    <h2>
-      <%= pluralize(@comment.errors.count, "error") %>
-      prohibited this comment from being saved:
-    </h2>
-    <ul>
-    <% @comment.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
+<div class="container">
+  <% if @comment.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@comment.errors.count, "error") %>
+        prohibited this comment from being saved:
+      </h2>
+      <ul>
+      <% @comment.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="post">
+    <h1><%= @post.title %></h1>
+    <div class="post-body">
+      <%= @post.content %>
+    </div>
   </div>
-<% end %>
 
-<%= @post.title %>
-<%= @post.content %>
 
-Please edit your comment:
-<!-- please note the array format for nested resources -->
-<%= form_for [@post, @comment]  do |f| %>
-  <%= f.label :content %>
-  <%= f.text_field :content %>
-  <%= f.submit %>
-<% end %>
+  <!-- please note the array format for nested resources -->
+  <div class="col-sm-offset-2 col-sm-8">
+    <%= form_for [@post, @comment], html: {class: 'form-horizontal'} do |f| %>
+      <fieldset>
+        <legend>
+          <h4>Please add your comment:</h4>
+        </legend>
+
+        <div class="form-group">
+          <%= f.label :content, "Content:",class: "col-sm-2  control-label" %>
+          <div class= "col-sm-7 col-md-7">
+            <%= f.text_area :content, class: "form-control", rows:10%>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-2">
+            <%= f.submit "Add Comment", class:"btn btn-default" %>
+          </div>
+        </div>
+
+      </fieldset>
+    <% end %>
+  </div>
+</div>
