--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,16 @@
 <head>
   <title>MyBlog</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css">
   <%= javascript_include_tag 'application' %>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -25,12 +29,6 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
-         <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
-         <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-        <% else %>
-         <li><%= link_to "Sign up", new_user_registration_path %></li>
-         <li><%= link_to "Login", new_user_session_path %></li>
-        <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Social signin <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -38,6 +36,21 @@
             <li><%= link_to "Twitter", user_twitter_omniauth_authorize_path %></li>
           </ul>
         </li>
+         <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+         <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+         <li><%= link_to "Read posts", posts_path %></li>
+         <li><%= link_to "Add new post", new_user_post_path(current_user) %></li>
+        <% else %>
+         <li><%= link_to "Sign up", new_user_registration_path %></li>
+         <li><%= link_to "Login", new_user_session_path %></li>
+         <li class="dropdown">
+           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Social signin <span class="caret"></span></a>
+           <ul class="dropdown-menu">
+             <li><%= link_to "Facebook", user_facebook_omniauth_authorize_path %></li>
+             <li><%= link_to "Twitter", user_twitter_omniauth_authorize_path %></li>
+           </ul>
+         </li>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
