--- a/app/views/replies/edit.html.erb
+++ b/app/views/replies/edit.html.erb
@@ -1,30 +1,45 @@
-<% if @reply.errors.any? %>
-  <div id="error_explanation">
-    <h2>
-      <%= pluralize(@reply.errors.count, "error") %>
-      prohibited this comment from being saved:
-    </h2>
-    <ul>
-    <% @reply.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
+<div class="container col-sm-offset-2 col-sm-8">
+  <% if @reply.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@reply.errors.count, "error") %>
+        prohibited this comment from being saved:
+      </h2>
+      <ul>
+      <% @reply.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+
+  In reply to:
+  <div class="repliable">
+    <%= @repliable.content %><br>
   </div>
-<% end %>
 
+  <div class="col-sm-offset-2 col-sm-8">
+    <fieldset>
+      <legend><h4>Please add your reply:</h4></legend>
+      <!-- please note the array format for nested resources -->
+      <%= form_for [@post, @reply], html:{class: "form-horizontal"} do |f| %>
+        <%= f.hidden_field :repliable_type %>
+        <%= f.hidden_field :repliable_id%>
+        <div class="form-group">
+          <%= f.label :content, "Content:",class: "col-sm-2  control-label" %>
+          <div class= "col-sm-10">
+            <%= f.text_area :content, class: "form-control", rows: 5 %>
+          </div>
+        </div>
 
-<%= @post.title %>
-<%= @post.content %>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-2">
+            <%= f.submit "Add Reply", class:"btn btn-default" %>
+          </div>
+        </div>
 
-In reply to:
-<%= @repliable.content %>
-
-Please edit your reply:
-<!-- please note the array format for nested resources -->
-<%= form_for [@post, @reply]  do |f| %>
-  <%= f.hidden_field :repliable_type %>
-  <%= f.hidden_field :repliable_id%>
-  <%= f.label :content %>
-  <%= f.text_field :content %>
-  <%= f.submit %>
-<% end %>
+    </fieldset>
+    <% end %>
+  </div>
+</div>
