change post and category to recipe and ingredient in views and models

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,7 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "welcome";
- @import "posts";
+ @import "recipes";
 
  .navbar.navbar-default {
    margin-bottom: 0px;
