--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,8 @@
         </li>
          <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
          <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-         <li><%= link_to "Read posts", posts_path %></li>
-         <li><%= link_to "Add new post", new_user_post_path(current_user) %></li>
+         <li><%= link_to "Read recipes", recipes_path %></li>
+         <li><%= link_to "Add new recipe", new_user_recipe_path(current_user) %></li>
         <% else %>
          <li><%= link_to "Sign up", new_user_registration_path %></li>
          <li><%= link_to "Login", new_user_session_path %></li>
