add padding to body

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,9 +14,13 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
- @import "welcome";
+ /*@import "welcome";*/
  @import "recipes";
 
  .navbar.navbar-default {
    margin-bottom: 0px;
+ }
+
+ body {
+   padding-top: 60px;
  }
