--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,12 +64,15 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
-<% if !flash.blank? %>
-  <p class="notice"><%= notice%></p>
-  <p class="alert"><%= alert %></p>
+<!--
+<% if !notice.blank? %>
+  <div class="alert alert-success" role="alert"><%= notice %></div>
 <% end %>
 
+<% if !alert.blank? %>
+  <div class="alert alert-success" role="alert"><%= alert %></div>
+<% end %>
+-->
 <%= yield %>
 
 </body>
