--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,13 +1,21 @@
 <%= stylesheet_link_tag "welcome" %>
+<div class="welcome-container">
+  <div class="jumbotron">
+    <div class="container">
+      <% if !notice.blank? %>
+        <div class="alert alert-success" role="alert"><%= notice %></div>
+      <% end %>
 
-<div class="jumbotron">
-  <div class="container">
-    <h1>Welcome to My Blog</h1>
-    <h4>Share your thoughts!</h4>
-    <br><br><br><br><br><br><br><br>
-    <p><%= link_to "Signup &raquo".html_safe, new_user_registration_path, class: "btn btn-primary btn-lg", role: "button" %>
-       <%= link_to "Login &raquo".html_safe, new_user_session_path, class: "btn btn-primary btn-lg", role: "button" %>
-    </p>
-    <p class="photographer">Photographed by Lesya Gusachenko &copy 2016</p>
+      <% if !alert.blank? %>
+        <div class="alert alert-success" role="alert"><%= alert %></div>
+      <% end %>
+      <h1>Welcome to My Blog</h1>
+      <h4>Share your thoughts!</h4>
+      <br><br><br><br><br><br><br><br>
+      <p><%= link_to "Signup &raquo".html_safe, new_user_registration_path, class: "btn btn-primary btn-lg", role: "button" %>
+         <%= link_to "Login &raquo".html_safe, new_user_session_path, class: "btn btn-primary btn-lg", role: "button" %>
+      </p>
+      <p class="photographer">Photographed by Lesya Gusachenko &copy 2016</p>
+    </div>
   </div>
 </div>
